--- a/NotariusApp/app/src/main/AndroidManifest.xml
+++ b/NotariusApp/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
@@ -20,6 +20,12 @@
 
         </activity>
         <activity android:name=".activity.WorkOutHistory"></activity>
+        <activity android:name=".activity.SettingsActivity"></activity>
+
+        <service android:name=".Notification.NotifyService" />
+
+        <service android:name=".Notification.ScheduleService" />
+
     </application>
 
 </manifest>
