--- a/NotariusApp/app/src/main/AndroidManifest.xml
+++ b/NotariusApp/app/src/main/AndroidManifest.xml
@@ -2,11 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.munzbit.notarius">
 
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+
 
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
@@ -30,7 +38,12 @@
         <service android:name=".notification.NotifyService" />
 
         <service android:name=".notification.ScheduleService" />
-        <service android:name=".alarm_manager.AlarmService"></service>
+
+        <service
+            android:name=".alarm_manager.AlarmService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <service android:name=".alarm_manager.NotificationService"></service>
 
         <receiver android:name=".alarm_manager.AlarmReceiver"></receiver>
