--- a/NotariusApp/app/src/main/AndroidManifest.xml
+++ b/NotariusApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.munzbit.notarius">
 
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -13,8 +12,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
-
 
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
@@ -35,8 +32,6 @@
 
         <activity android:name=".activity.SettingsActivity" />
 
-        <service android:name=".notification.NotifyService" />
-
         <service android:name=".notification.ScheduleService" />
 
         <service
@@ -48,6 +43,7 @@
 
         <receiver android:name=".alarm_manager.AlarmReceiver"></receiver>
 
+        <receiver android:name=".alarm_manager.ServiceReceiver"></receiver>
 
     </application>
 
