--- a/NotariusApp/app/build.gradle
+++ b/NotariusApp/app/build.gradle
@@ -21,9 +21,9 @@ android {
 }
 
 dependencies {
-
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.android.support:appcompat-v7:22.2.0'
-
-
+    compile files('libs/joda-time-2.2.jar')
+    compile files('libs/espresso-1.1-bundled.jar')
+    compile files('libs/android-support-v4.jar')
 }
